# Komunikator-Internetowy-gui

./: README.md
Komunikator_internetowy/: CMakeLists.txt  client.cpp  client.h  client.ui  main.cpp  message.cpp  message.h  message.ui  usermenu.cpp  usermenu.h  usermenu.ui
server/: s  server.cpp  server.h  server_file.cpp  server_findconv.cpp
server/resources/: conversations.json  users.json
